--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LoopBack Angular example</title>
+    <title>Safe Food</title>
 
     <!-- Bootstrap -->
     <link href="css/app.css" rel="stylesheet">
@@ -18,7 +18,9 @@
     <![endif]-->
   </head>
   <body>
-      <div ng-view></div>
+      <div class="container">
+        <div ng-view></div>
+      </div>
     <script src="vendor/angular/angular.min.js"></script>
     <script src="vendor/angular-route/angular-route.min.js"></script>
     <script src="js/app.js"></script>
