--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.tmp) assets/styles/main.css -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="vendor/angular-material/angular-material.css">
     <link rel="stylesheet" href="assets/styles/main.css">
     <!-- endbuild -->
   </head>
@@ -19,7 +20,7 @@
       <div ui-view="main"></div>
     </div>
 
-
+    <script src="http://maps.google.com/maps/api/js"></script>
     <script src="vendor/requirejs/require.js" data-main="scripts/main"></script>
   </body>
 </html>
