Modified default route '/' to redirect to '/food-recall-search'. Added footer in the page to display last updated date.

--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -80,3 +80,4 @@
     </section>
   </md-sidenav>
 </md-content>
+<div align="right" style="font-size:12px;padding-right:5px;">The openFDA beta research project contents were last updated on {{lastDataUpdatedDate | date:'MMMM dd, yyyy'}}</div>
