added initial date disclaimer for search results

--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -8,8 +8,8 @@
     Height set to 600px but needs to be updated fill remaining space
     May require a directive or someone good with css
   -->
-    <map zoom="11" 
-      center="[40.74, -74.18]" 
+    <map zoom="11"
+      center="[40.74, -74.18]"
       disable-default-u-i="true"
       disable-double-click-zoom="true"
       draggable="false"
@@ -52,7 +52,7 @@
         <input name="productType" ng-model="search.productType">
       </md-input-container>
       <div class="md-action" layout="row" layout-sm="column" layout-align="end center">
-        <md-button class="md-raised md-primary" ng-click="search(search)">Search</md-button>
+        <md-button class="md-raised md-primary" ng-click="searchDisclaimer(search)">Search</md-button>
       </div>
     </form>
     <md-divider></md-divider>
