--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,8 @@
     <!-- build:css(.tmp) assets/styles/main.css -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/angular-material/angular-material.css">
+    <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
+    <link rel="stylesheet" href="vendor/angular-motion/dist/angular-motion.css">
     <link rel="stylesheet" href="assets/styles/main.css">
     <!-- endbuild -->
   </head>
@@ -18,7 +20,6 @@
 
     <div ui-view="main"></div>
 
-    <script src="http://maps.google.com/maps/api/js"></script>
     <script src="vendor/requirejs/require.js" data-main="scripts/main"></script>
   </body>
 </html>
