--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -6,7 +6,7 @@
 
 <md-card>
   <md-card-content>
-    <h2 class="md-title" style="margin-top:0px">About food recalls and enforcement reports</h2>
+    <h2 class="md-title" style="margin-top:0px">About food recalls and enforcement reportss</h2>
     <p>Recalls are appropriate...</p>
   </md-card-content>
 </md-card>
