Company Name model property is changed to recalling_firm

--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -29,7 +29,7 @@
       </md-input-container>
       <md-input-container flex="33" flex-sm="50">
         <label>Company Name</label>
-        <input name="companyName" ng-model="searchParams.companyName">
+        <input name="companyName" ng-model="searchParams.recalling_firm">
       </md-input-container>
       <md-input-container flex="33" flex-sm="50">
         <label>Recall Start Date</label>
