--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -64,26 +64,21 @@
   </form>
 
   <md-divider></md-divider>
-  
+
   <section>
     <md-card ng-repeat="item in recallData.results track by $index"
       ng-click="viewDetails(item)">
-      <div ng-class="{ 'bg-danger': item.classification === 'Class I',
+  <!--       <div ng-class="{ 'bg-danger': item.classification === 'Class I',
                     'bg-warning': item.classification === 'Class II',
                     'bg-success': item.classification === 'Class III' }"
                     style="padding:16px"
                     >
         <span class="sr-only">item.classification</span>
-      </div>
+      </div> -->
       <md-card-content>
-        <h2 class="md-title" style="margin-top:0px">{{item.recalling_firm}}</h2>
-        <div><strong>Status:</strong> {{item.status}}</div>
-        <div><strong>Date Initiated:</strong> {{item.recall_initiation_date}}</div>
+        <h2 class="md-title">{{item.recalling_firm}} ({{item.recall_number}})</h2>
+        <div><strong>Recall Initiated:</strong> {{item.recall_initiation_date}} ({{item.status}})</div>
         <div><strong>Product Description:</strong> {{item.product_description}}</div>
-        <div>
-          <strong class="clearfix">Reason For Recall:</strong>
-          {{item.reason_for_recall}}
-        </div>
       </md-card-content>
     </md-card>
   </section>
