--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -78,6 +78,7 @@
       <md-card-content>
         <h2 class="md-title">{{item.recalling_firm}} ({{item.recall_number}})</h2>
         <div><strong>Recall Initiated:</strong> {{item.recall_initiation_date}} ({{item.status}})</div>
+        <div><strong>Distribution Pattern:</strong> {{item.distribution_pattern}}</div>
         <div><strong>Product Description:</strong> {{item.product_description}}</div>
       </md-card-content>
     </md-card>
