--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -6,8 +6,7 @@
       <h3 style="margin-top:0px">Event</h3>
       <div><strong>Recall Number:</strong> {{details.recall_number}}</div>
       <div><strong>Recall Reported:</strong> {{details.report_date}}</div>
-      <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}}</div>
-      <div><strong>Status:</strong> {{details.status}}</div>
+      <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} (details.status)</div>
       <div><strong>Distribution Pattern:</strong> {{details.distribution_pattern}}</div>
       <div><strong>Classification:</strong> {{details.classification}}</div>
       <div>
