--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -33,15 +33,15 @@
       </md-input-container>
       <md-input-container flex="33" flex-sm="50">
         <label>Recall Start Date</label>
-        <input name="recallStartDate" ng-model="searchParams.recallStartDate">
+        <input type="date" name="recallStartDate" ng-model="searchParams.recallStartDate">
       </md-input-container>
       <md-input-container flex="33" flex-sm="50">
         <label>Recall End Date</label>
-        <input name="recallEndDate" ng-model="searchParams.recallEndDate">
+        <input type="date" name="recallEndDate" ng-model="searchParams.recallEndDate">
       </md-input-container>
       <md-input-container flex="33" flex-sm="50">
-        <label>Product Type</label>
-        <input name="productType" ng-model="searchParams.product_type">
+        <label>Product Description</label>
+        <input name="productType" ng-model="searchParams.product_description">
       </md-input-container>
     </div>
 
