--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,12 +1,30 @@
 <md-toolbar>
 	<div class="md-toolbar-tools">
 	  <h1>Safe Food</h1>
+    <span flex></span>
+    <h1><a href="#/food-recall-search">View Enforcement Reports</a></h1>
 	</div>
 </md-toolbar>
 
 <md-card>
   <md-card-content>
-    <h2 class="md-title" style="margin-top:0px">About food recalls and enforcement reportss</h2>
-    <p>Recalls are appropriate...</p>
+    <h2 class="md-title" style="margin-top:0px">Safe Food - Recall Data</h2>
+    <p>The Food Recalls on this site are based on the Enforcement Reports published via the OpenFDA API</p>
+
+    <p>For more information about OpenFDA </p>
+    <ul>
+      <li><a href="https://open.fda.gov/index.html">OpenFDA</a></li>
+      <li><a href="https://open.fda.gov/terms/">Terms</a></li>
+      <li><a href="https://open.fda.gov/about/">About</a></li>
+      <li><a href="https://open.fda.gov/about/">Food Enforcement Reports API</a></li>
+    </ul>
+
+    <p>For more information on the FDA's Food Enforcement Reports</p>
+    <ul>
+      <li><a href="http://www.fda.gov/Safety/Recalls/EnforcementReports/ucm181313.htm">Enforcement Report Definitions</a></li>
+      <li><a href="http://www.fda.gov/Safety/Recalls/default.htm">Recalls press release</a></li>
+      <li><a href="http://www.fda.gov/ForConsumers/ConsumerUpdates/ucm049070.htm">FDA 101: Product Recalls</a></li>
+    </ul>
+
   </md-card-content>
 </md-card>
