--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/angular-material/angular-material.css">
     <link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
+    <link rel="stylesheet" href="vendor/ngtoast/dist/ngToast.css">
+    <link rel="stylesheet" href="vendor/ngtoast/dist/ngToast-animations.css">
     <link rel="stylesheet" href="assets/styles/main.css">
     <!-- endbuild -->
   </head>
