--- a/client/scripts/features/food-recall-search/food-recall-search.html
+++ b/client/scripts/features/food-recall-search/food-recall-search.html
@@ -13,47 +13,64 @@
   </md-toolbar>
 
   <form name="recall-search" layout-padding>
-    <div ng-show="advancedSearch" layout="row" layout-wrap>
-      <md-input-container flex="33" flex-sm="50">
-        <label>City</label>
-        <input name="city" ng-model="searchParams.city">
-      </md-input-container>
-      <md-input-container flex="33" flex-sm="50">
-        <label>State</label>
-        <input name="state" ng-model="searchParams.state">
-      </md-input-container>
-      <md-input-container flex="33" flex-sm="50">
-        <label>Company Name</label>
-        <input name="companyName" ng-model="searchParams.recalling_firm">
-      </md-input-container>
-      <md-input-container flex="33" flex-sm="50">
-        <label>Recall Start Date</label>
-        <input type="date" name="recallStartDate" ng-model="searchParams.recallStartDate">
-      </md-input-container>
-      <md-input-container flex="33" flex-sm="50">
-        <label>Recall End Date</label>
-        <input type="date" name="recallEndDate" ng-model="searchParams.recallEndDate">
-      </md-input-container>
-      <md-input-container flex="33" flex-sm="50">
-        <label>Product Description</label>
-        <input name="productType" ng-model="searchParams.product_description">
-      </md-input-container>
+    <div ng-show="advancedSearch">
+        <div class="row">
+          <div class="form-group col-md-6">
+            <label for="affectedArea">Affected Area</label>
+            <input type="text" class="form-control" name="affectedArea" ng-model="searchParams.distribution_pattern" >
+          </div>
+          <div class="form-group col-md-6">
+            <label for="affectedProduct">Affected Product</label>
+            <input type="text" class="form-control" name="affectedProduct" ng-model="searchParams.product_description">
+          </div>
+        </div>
+        <div class="row">
+            <div class="form-group col-md-6">
+              <label for="companyName">Company Name</label>
+              <input type="text" class="form-control" name="companyName" ng-model="searchParams.recalling_firm">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="healthHazardLevel">Health Hazard Level</label>
+              <select class="form-control" name="healthHazardLevel" id="healthHazardLevel" ng-model="searchParams.classification" ng-options="healthHazardLevel for healthHazardLevel in healthHazardLevels"></select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="currentStatus">Current Status</label>
+                    <select class="form-control" name="currentStatus" id="currentStatus" ng-model="searchParams.status" ng-options="status for status in statusList" multiple></select>
+                </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="dateRange">Date Range</label>
+                <select class="form-control" name="dateRange" id="dateRange" ng-model="searchParams.recall_initiation_date" ng-options="date.name for date in dateRange"></select>
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary pull-right" ng-click="searchDisclaimer(searchParams)">Advance Search</button>
+              </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 
-    <div ng-show="!advancedSearch" layout="row" layout-wrap>
-      <md-input-container flex="100">
-        <label>example: Spinach MI</label>
-        <input name="generalSearch" ng-model="searchParams.generalSearch">
-      </md-input-container>
+    <div class="row" ng-show="!advancedSearch">
+      <div class="form-group col-md-10">
+        <!--<label>example: Spinach MI</label>-->
+        <input type="text" class="form-control" name="generalSearch" ng-model="searchParams.generalSearch" placeholder="example: Spinach MI">
+      </div>
     </div>
 
-    <div class="md-action" layout="row" layout-align="end center">
-      <md-button class="md-raised md-primary"
-        ng-click="searchDisclaimer(searchParams)"
-        aria-label="Search">
-        Search
-      </md-button>
-    </div>
+    <!--<div class="md-action" layout="row" layout-align="end center">-->
+      <!--<md-button class="md-raised md-primary"-->
+        <!--ng-click="searchDisclaimer(searchParams)"-->
+        <!--aria-label="Search">-->
+        <!--Search-->
+      <!--</md-button>-->
+    <!--</div>-->
   </form>
 
   <md-divider></md-divider>
