fix data bindings in details

--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -6,14 +6,14 @@
       <h3 style="margin-top:0px">Event</h3>
       <div><strong>Recall Number:</strong> {{details.recall_number}}</div>
       <div><strong>Recall Reported:</strong> {{details.report_date}}</div>
-      <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} (details.status)</div>
+      <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} ({{details.status}})</div>
       <div><strong>Distribution Pattern:</strong> {{details.distribution_pattern}}</div>
       <div><strong>Classification:</strong> {{details.classification}}</div>
       <div>
         <strong class="clearfix">Reason:</strong>
         {{details.reason_for_recall}}
       </div>
-      <div><strong>Initial Firm Notification:</strong> {{details.status}}</div>
+      <div><strong>Initial Firm Notification:</strong> {{details.initial_firm_notification}}</div>
     </section>
     <section>
       <h3>Company</h3>
