Get data sorted by recall_initiation_date

--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -9,9 +9,7 @@
       <div><strong>Recall Initiated:</strong> {{details.recall_initiation_date}} ({{details.status}})</div>
       <div><strong>Distribution Pattern:</strong> {{details.distribution_pattern}}</div>
       <div><strong>Classification:</strong> {{details.classification}}</div>
-      <div>
-        <strong class="clearfix">Reason:</strong>
-        {{details.reason_for_recall}}
+      <div><strong>Reason:</strong> {{details.reason_for_recall}}
       </div>
       <div><strong>Initial Firm Notification:</strong> {{details.initial_firm_notification}}</div>
     </section>
