[ADSBPA-66] Changing nav bar and navigation between pages.

--- a/client/index.html
+++ b/client/index.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="vendor/ngtoast/dist/ngToast.css">
     <link rel="stylesheet" href="vendor/ngtoast/dist/ngToast-animations.css">
     <link rel="stylesheet" href="assets/styles/main.css">
+    <base href="/">
     <!-- endbuild -->
   </head>
   <body>
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <div class="container">
+    <![endif]-->    
+    <div class="container" style="width:100%">
         <div ui-view="main"></div>
     </div>
 
