--- a/client/scripts/features/home/home.html
+++ b/client/scripts/features/home/home.html
@@ -1,10 +1,16 @@
-<md-toolbar>
-	<div class="md-toolbar-tools">
-	  <h1>Safe Food</h1>
-    <span flex></span>
-    <h1><a href="#/food-recall-search">View Enforcement Reports</a></h1>
-	</div>
-</md-toolbar>
+<div ng-include="'/scripts/features/commons/header.html'"></div>
+<div class="row"><!--  ng-show="!advancedSearch"> -->
+  <div class="search-bg">
+      <div class="input-group inner" page-scroll  nvabar-searchbox-id="navSearchId">
+        <input  type="text" class="form-control" id="generalSearch" ng-model="searchParams.generalSearch"  placeholder="example: Spinach MI">
+        <sapn class="input-group-btn">
+          <button class="btn btn-default" type="button" ng-click="searchDisclaimer(searchParams)">
+            <span class="glyphicon glyphicon-search"></span>
+          </button>
+          </sapn>
+      </div>
+  </div>
+</div>
 
 <md-card>
   <md-card-content>
@@ -27,4 +33,4 @@
     </ul>
 
   </md-card-content>
-</md-card>
+</md-card> 
