Added Last Updated date to Detail View

--- a/client/scripts/features/food-recall-search/food-recall-details.html
+++ b/client/scripts/features/food-recall-search/food-recall-details.html
@@ -1,5 +1,5 @@
 <md-dialog>
-  <h2 style="padding: 0px 22px 16px 22px; margin-bottom: 12px;">Recall Details</h2>
+  <h2 style="padding: 0px 22px 0px 22px;">Recall Details </h2><small style="padding: 3px 22px 5px 22px;  margin-bottom: 8px; margin-top:5px;">(Last Updated on {{details.last_updated | date: "dd MMM yyyy"}})</small>
   <md-divider></md-divider>
   <md-dialog-content style="padding-top: 12px; padding-bottom: 12px">
     <section>
